--- a/style.css
+++ b/style.css
@@ -1,4 +1,39 @@
 *{box-sizing: border-box;}
 html{font-size: 62,5%;}
-body {background-color: darkviolet;
-font-family: sans-serif;}
+
+body {
+background-image: url(background.jpg);
+font-family: sans-serif;
+color: slategrey;
+background-repeat: no-repeat;
+background-size: cover;}
+.header{
+    display: flex;
+    height:15vh;
+    width: 100vw;
+    }
+
+header > h1 { align-content: center;
+    
+}
+header > button {
+
+}
+main{
+    height: 69vh;
+    width: 100vw;
+}
+footer {
+    border-top: 2px;
+    border-top-style: double;
+    display: flex;
+    height: 15vh;
+    width: 100vw;
+    width: 100%;
+    height: 10vh;
+    font-weight: bold;
+    font-size: 1.6rem; }
+    .p1 {margin-left: 600px;}
+
+    
+
