--- a/style.css
+++ b/style.css
@@ -11,12 +11,24 @@ background-size: cover;}
     display: flex;
     height:15vh;
     width: 100vw;
-    }
+   align-items: center;
+   background-color: antiquewhite;}
 
-header > h1 { align-content: center;
+.header > h1 { 
+    background-color: aquamarine;
+    width: 50%;
+    height: 100%
     
 }
-header > button {
+.header > button {
+    margin-left: 800px;
+        background-color: yellow;
+    height: 40px;
+    width: 120px;
+    box-shadow: 4px;
+    font-weight: bold;
+    background-color: blueviolet;
+
 
 }
 main{
